# article-to-TTS-converter

./: README.md  pyproject.toml
config/: abbreviations_de.yaml  abbreviations_en.yaml  abbreviations_fr.yaml  default.yaml
src/article2tts/: __init__.py  abbreviations.py  cleaner.py  cli.py  config.py  extractor_docx.py  extractor_pdf.py  markdown_writer.py  normalizer.py  tag_extractor.py
src/article2tts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_abbreviations.py  test_cleaner.py  test_markdown_writer.py  test_normalizer.py  test_tag_extractor.py
